pagina inicio ok

--- a/index.html
+++ b/index.html
@@ -90,23 +90,24 @@
       <div class="social"> 
            <h2>Encontranos en</h2>
            <p class="address">Junin 1616 1piso, Recoleta.</p>
-           <p>E-mail:<a href="micaela.012@gmail.com">micaela.012@gmail.com</a></p>
-          <span><i class="fab fa-facebook-f"></i>facebook</span>
-          <p>instagram</p>
-        </div>
+           <p><a href="micaelatavernacp@gmail.com"><i class="fas fa-inbox"></i> micaelatavernacp@gmail.com
+          </a></p>
+           <p><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>/mtcirugiaplastica</a></p>
+           <p><a href="https://www.instagram.com/mtcirugiaplastica/"> <i class="fab fa-instagram"></i>@mtcirugiaplastica</a></p>
+      </div>  
         <div class="locationMap">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.5681968870244!2d-58.396039684770805!3d-34.589790980463036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa2a2d23af3%3A0xe46ac88f9ba05c19!2sJun%C3%ADn%201616%2C%20C1113AAR%20CABA!5e0!3m2!1ses-419!2sar!4v1580346122293!5m2!1ses-419!2sar" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe> 
-        </div>  
+        </div>
     </div>
     <footer class='footerContainer'>
         <div class= footerNav>
-           <span><i class="fas fa-inbox"></i>" <a href="micaela.012@gmail.com">micaelatavernacp@gmail.com
-          </a></span>
-           <span><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>/mtcirugiaplastica</a></span>
-           <span><a href="https://www.instagram.com/mtcirugiaplastica/"> <i class="fab fa-instagram"></i>@mtcirugiaplastica</a></span>
+           <p><a href="micaelatavernacp@gmail.com"> <i class="fas fa-inbox"></i>micaelatavernacp@gmail.com
+          </a></p>
+           <p><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>/mtcirugiaplastica</a></p>
+           <p><a href="https://www.instagram.com/mtcirugiaplastica/"> <i class="fab fa-instagram"></i>@mtcirugiaplastica</a></p>
         </div>
         <div>
-                Copyright © 2020
+                Created by @Merchy
         </div>
     </footer>
    
