section medicina estetica

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
              <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem eos dolore voluptas facilis dolorum, enim sunt debitis velit explicabo illum vero rerum ratione delectus vel. Ea reiciendis inventore perferendis dicta.
             </p>
-        <div class='seeMore'><a href="servicios.html">Ver Mas</a></div>
+        <div class='seeMore'><a href="medicina-estetica.html">Ver Mas</a></div>
       </div>
     </div>
     <div  id="contacto"  class="container"> 
