--- a/medicina-estetica.html
+++ b/medicina-estetica.html
@@ -40,25 +40,25 @@
         <div class=flip-card> 
           <div class="flip-card-inner"> 
             <div class='flip-card-front'><p>Toxina</p></div>
-            <div class='flip-card-back'><a href="#toxina"><p>Ver Mas</p></a></div>
+            <div class='flip-card-back'><a href="#toxina"><p>Conocer</p></a></div>
           </div>
         </div>
         <div class=flip-card> 
           <div class="flip-card-inner"> 
             <div class='flip-card-front'><p>Sudoración Exccesiva</p></div>
-            <div class='flip-card-back'><a href="#sudoracion-excesiva"><p>Ver Mas</p></a></div>
+            <div class='flip-card-back'><a href="#sudoracion-excesiva"><p>Conocer</p></a></div>
           </div>
         </div>
         <div class=flip-card> 
           <div class="flip-card-inner"> 
             <div class='flip-card-front'><p>Toxina</p></div>
-            <div class='flip-card-back'><a href="#toxina"><p>Ver Mas</p></a></div>
+            <div class='flip-card-back'><a href="#toxina"><p>Conocer</p></a></div>
           </div>
         </div>
         <div class=flip-card> 
           <div class="flip-card-inner"> 
             <div class='flip-card-front'><p>Toxina</p></div>
-            <div class='flip-card-back'><a href="#toxina"><p>Ver Mas</p></a></div>
+            <div class='flip-card-back'><a href="#toxina"><p>Conocer</p></a></div>
           </div>
         </div>
        
