--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <header id='mainHeader'>
         <nav class="mainNav" id='navBar'>
           <div class="logo">
-            <img src="#" alt=""> <a href="#inicio">LOGO</a>
+            <a href="#inicio"><img src="styles/img/logoMT.png" alt=""></a>
           </div>
           <div class='menu'> 
             <ul>
-              <li> <a href="#inicio">Inicio</a></li>
               <li> <a href="#staff">Staff</a></li>
               <li> <a href="#estetica">Medicina Estética</a></li>
               <li> <a href="#contacto">Contacto</a></li>
@@ -27,46 +26,43 @@
           </div>
         </nav>
     </header>
-    <div id='inicio'>
-            <div class="mainCarrousel"> 
-              <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-                </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img src="styles/img/1.png" class="d-block w-100 imgsize" alt="...">
+    <div class=main-container>
+        <div id='inicio' class=main>
+                <div class="mainCarrousel"> 
+                  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                    </ol>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="styles/img/1.png" class="d-block w-100 imgsize" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="styles/img/2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="styles/img/3.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="styles/img/4.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="styles/img/5.png" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
                     </div>
-                    <div class="carousel-item">
-                      <img src="styles/img/2.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="styles/img/3.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="styles/img/4.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="styles/img/5.png" class="d-block w-100" alt="...">
-                    </div>
-                  </div>
                 </div>
-            </div>
-            <div class="mainBannerMob">
-              <img src='styles/img/1.png'>
-        
-            </div>
+        </div>
     </div>
     <div id="staff" class='container'>
       <div class="staffDescription"> 
        <h2>Nuestro Staff</h2>
         <p>
-
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident voluptatem dolor aspernatur? Accusamus qui, recusandae veritatis iste minus aliquam autem perferendis! Possimus aperiam error blanditiis, suscipit ducimus ab sit modi.
         </p>
       </div>
@@ -74,16 +70,72 @@
           <img src="styles/img/staff5.png">
       </div>
     </div>
-    <div id="estetica" class='container'>
-      <div class="imgProd">
-        <img src="styles/img/prod.png">
-      </div>
-            <div class="productContainer">
-             <h2>Medicina Estetica</h2>
-             <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem eos dolore voluptas facilis dolorum, enim sunt debitis velit explicabo illum vero rerum ratione delectus vel. Ea reiciendis inventore perferendis dicta.
-            </p>
-        <div class='seeMore'><a href="medicina-estetica.html">Ver Mas</a></div>
+    <div id="service" class='container products'>
+              <div class="imgProd">
+                <img src="styles/img/prod.png">
+              </div>
+              <h3 >Conocé todos los tratamientos de Medicina Estética</h3>
+              <div class=flip-card> 
+                <div class="flip-card-inner"> 
+                  <div class='flip-card-front'><p>Toxina</p></div>
+                  <div class="flip-card-back" data-toggle="modal" data-target="#toxina"><a href="#toxina"><p>Conocer</p></a></div>
+                </div>
+              </div>
+              <div class=flip-card> 
+                <div class="flip-card-inner"> 
+                  <div class='flip-card-front'><p>Sudoración Exccesiva</p></div>
+                  <div class='flip-card-back'data-toggle="modal" data-target="#sudoracion-excesiva"><a href="#sudoracion-excesiva"><p>Conocer</p></a></div>
+                </div>
+              </div>
+              <div class=flip-card> 
+                <div class="flip-card-inner"> 
+                  <div class='flip-card-front'><p>Toxina</p></div>
+                  <div class='flip-card-back' data-toggle="modal" data-target="#toxina"><a href="#toxina"><p>Conocer</p></a></div>
+                </div>
+              </div>
+              <div class=flip-card> 
+                <div class="flip-card-inner"> 
+                  <div class='flip-card-front'><p>Toxina</p></div>
+                  <div class='flip-card-back'data-toggle="modal" data-target="#toxina"><a href="#toxina"><p>Conocer</p></a></div>
+                </div>
+              </div>
+        </div>
+        <div class="modal fade" id="toxina" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Toxina</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                La toxina botulínica logra relajar los músculos de la mímica para que no se marquen las arrugas o evitar que aparezcan. Tiene una duración aproximada de 4-6 meses. Se puede aplicar en frente, patas de gallo, cuello o nariz. También se utiliza para aquellos pacientes que tengan sudoración excesiva en manos o axilas.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
+          </div>
+        </div> 
+        <div class="modal fade" id="sudoracion-excesiva" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Toxina</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                La hiperhidrosis es la sudoración excesiva no relacionada necesariamente con el ejercicio o calor intenso. Puede afectar axilas, manos y pies que interfiere en la vida cotidiana y generando disconfort. Entre las opciones terapéuticas que existen, la aplicación de toxina botulínica bloquea la producción de sudor, mejorando notablemente los signos que este produce. Es un procedimiento rápido y eficaz que se aplica directamente en las palmas de las manos, plantas de los pies o axilas y que tiene una duración de 8-12 meses.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
+          </div>
+        </div>  
       </div>
     </div>
     <div  id="contacto"  class="container"> 
@@ -101,13 +153,12 @@
     </div>
     <footer class='footerContainer'>
         <div class= footerNav>
-           <p><a href="micaelatavernacp@gmail.com"> <i class="fas fa-inbox"></i>micaelatavernacp@gmail.com
-          </a></p>
+           <p><a href="micaelatavernacp@gmail.com"> <i class="fas fa-inbox"></i>micaelatavernacp@gmail.com</a></p>
            <p><a href="https://www.facebook.com/mtcirugiaplastica/"> <i class="fab fa-facebook-f"></i>/mtcirugiaplastica</a></p>
            <p><a href="https://www.instagram.com/mtcirugiaplastica/"> <i class="fab fa-instagram"></i>@mtcirugiaplastica</a></p>
         </div>
-        <div>
-                Created by @Merchy
+        <div class="copyright">
+           <p>Created by @Merchy</p>
         </div>
     </footer>
    
