--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://kit.fontawesome.com/c5597b534a.js" crossorigin="anonymous"></script>
     <script type='text/javascript' src="script.js"></script>
        <title>MT Cirugía Plástica</title>
+       <link rel = "icon" href =  
+       "styles/img/logo-fondo-blanco.jpg" 
+               type = "image/x-icon"> 
 </head>
 <body>
     <header id='mainHeader'>
