changes on services

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <nav>
           <ul>
             <li>
-              <a href="#service"><span>Tratamientos</span></a>
+              <a href="#estetica"><span>Medicina Estetica</span></a>
+            </li>
+            <li>
+              <a href="#service"><span>Procedimientos</span></a>
             </li>
             <li>
              <a href="#contacto"><span>Contacto</span></a>
@@ -91,7 +94,13 @@
             </p>
           </div>
         </div>
-        <h3 id="service" >Nuestros tratamientos destacados</h3>
+        <h3 id="estetica" >Tratamientos de medicina estética</h3>
+      <div  class="description"> 
+         <div class="card">   
+          <div class="card-inner" data-toggle="modal" data-target="#cirugiaplastica"><a href="#cirugiaplastica"><p>Medicina Estetica</p></a></div>
+        </div>
+      </div>
+        <h3 id="service" >Procedimientos quirurgicos y tratamientos de medicina estética</h3>
       <div  class="description"> 
          <div class="card">   
           <div class="card-inner" data-toggle="modal" data-target="#cirugiaplastica"><a href="#cirugiaplastica"><p>CIRUGIA PLASTICA Y REPARADORA</p></a></div>
@@ -122,11 +131,12 @@
             </button>
           </div>
           <div class="modal-body"> 
-            Mamas:
-            <a href=medicina-estetica.html#aumentomamario>Aumento Mamario</a>
-            <a href=medicina-estetica.html#reduccionmamaria>Reduccion Mamaria</a>
-            <a href=medicina-estetica.html#mastopexia>Mastopexia</a>
-            <a href=medicina-estetica.html#ginecomastia>Ginecomastia</a>
+            <ul> Mamas:
+            <li >Aumento Mamario</li>
+            <li>Reduccion Mamaria</li>
+            <li>Mastopexia</li>
+            <li>Ginecomastia</li>
+          </ul>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary"><a href=medicina-estetica.html#mamas>Ver mas</a></button>
