--- a/medicina-estetica.html
+++ b/medicina-estetica.html
@@ -19,7 +19,10 @@
       <nav>
         <ul>
           <li>
-            <a href="#service"><span>Tratamientos</span></a>
+            <a href="#service"><span>Procedimientos</span></a>
+          </li>
+          <li>
+            <a href="#service"><span>Medicina Estetica</span></a>
           </li>
           <li>
            <a href="#contacto"><span>Contacto</span></a>
@@ -61,8 +64,7 @@
       </div>
   </div>
 
-  <div id="service" class="container">
-    <h3 >Conocé todos los tratamientos de Cirugia Plastica Reparadora y Medicina Estética</h3>  
+  <div id="service" class="container"> 
       <h2>CIRUGIA PLASTICA Y REPARADORA </h2>
       <h2 id="mamas">Mamas</h2>
         <ul> 
@@ -91,7 +93,7 @@
         
 
 </ul>
-
+<!--
 ROSTRO
 BLEFAROPLASTIA
 La blefaroplastia es la cirugía que rejuvenece el contorno de los ojos eliminando el exceso de piel y bolsas grasas tanto de los párpados superiores como inferiores. En los párpados superiores la cicatriz queda disimulada en el surco palpebral y en los inferiores en la línea de las pestañas. También se pueden eliminar las bolsas grasas inferiores sin incisiones externas. 
@@ -197,7 +199,7 @@ QUEMADURAS
 Las quemaduras son un tipo de lesión sobre tejidos producida por un agente externo que dentro de los mas frecuentes se encuentran el frío, calor o electricidad. Existen distintos grados y extensiones de las mismas que requieren tratamientos completamente distintos y deben ser llevados a cabo por un especialista en cirugía plástica y reparadora. Requieren de una atención inicial y una alejada en la que se necesiten posiblemente el uso de injertos o colgajos. 
 RECONSTRUCCIÓN MAMARIA
 La reconstrucción mamaria luego del cancer de mama puede ser realizada con implantes (con expansor e implante) o con tejido propio de la paciente. Según el caso se elegirá la opción mas adecuada y confortable para la paciente. 
-
+-->
   </div>      
     <div  id="contacto"  class="container"> 
       <div class="social"> 
