--- a/cirugia-genital.html
+++ b/cirugia-genital.html
@@ -67,74 +67,41 @@
         </div>
     </div>
     <div class="container">
-      <h2 class="service-title">Medicina Estética</h2>
-        <div class="service-presentation"> 
-          
+      <h2 class="service-title">Cirugía genital</h2>
+        <div class="service-presentation">   
           <div class="service-list">
             <div class="service-pic">
-              <img src="styles/img/medicinaestetica.jpg" alt="cuerpo-medicina-estetica">
+              <img src="styles/img/mujer.jpg" alt="mujer">
             </div>
             <ul > 
               <li> 
-                <h2 id="peelings">peelings</h2>
-                  <p> el peeling es uno de los tratamientos médicos estéticos mas populares. consiste en la eliminación de las capas mas superficiales de la piel mediante el uso de sustancias químicas o mecánicas. esto hace que la piel luzca mas joven y luminosa y la estimula a generar nuevas y mayores fibras elásticas y de colágeno. cada método o sustancia poseerá características especificas para cada tipo de piel. se pueden tratar: arrugas finas, estrías, cicatrices de acné, manchas, poros dilatados, pieles de aspecto envejecido o apagadas. existen peelings de baja, media o alta intensidad para cada inesteticismo que deben ser aplicados por un médico especialista en el tema. 
+                <h2 id="labioplastia-aumento">labioplastia de aumento</h2>
+                  <p> la pérdida de colágeno y turgencia también se hacen notorias con el paso del tiempo en la región genital. esto se puede recuperar lipoaspirando grasa de otra región del cuerpo y transfiriéndola a los labios mayores logrando simetría y volumen. también se puede realizar mediante rellenos con ácido hialurónico. 
                   </p>
               </li>
               <li> 
-                <h2 id="celulitis">celulitis y flaccidez</h2>
-                  <p> la celulitis es una condición en la que la piel adquiere aspecto de cáscara de naranja que tiene numerosas causas como hormonales, circulatorias, dieta, sedentarismo, tabaquismo entre otras. existen diferentes grados y características por lo que cada una posee un tratamiento diferente. te recomendamos una consulta con un especialista en el tema para que pueda elegir la opción mas adecuada. 
-                  </p>
-              </li>
-              <li> 
-                <h2 id="toxina">toxina botulínica</h2>
-                  <p> la toxina botulínica logra relajar los músculos de la mímica para que no se marquen las arrugas o evitar que aparezcan. tiene una duración aproximada de 4-6 meses. se puede aplicar en frente, patas de gallo, cuello o nariz. también se utiliza para aquellos pacientes que tengan sudoración excesiva en manos o axilas y en aquellos que presentan bruxismo (apretón de dientes durante la noche). 
+                <h2 id="labioplastia-reduccion">labioplastia de reducción </h2>
+                  <p> el procedimiento consiste en llevar el tamaño de los labios menores colgantes o agrandados a una proporción armónica y confortable para la paciente. 
                   </p>
               </li>
             </ul>
             <div class="service-pic">
-              <img src="styles/img/cuerpo2.jpg" alt="cuerpo-medicina-estetica">
+              <img src="styles/img/medicos.jpg" alt="medicos">
             </div>
             <ul>
               <li> 
-                <h2 id="sudoracion">sudoración excesiva</h2>
-                  <p> la hiperhidrosis es la sudoración excesiva no relacionada necesariamente con el ejercicio o calor intenso. puede afectar axilas, manos y pies que interfiere en la vida cotidiana y generando disconfort. entre las opciones terapéuticas que existen, la aplicación de toxina botulínica bloquea la producción de sudor, mejorando notablemente los signos que este produce. es un procedimiento rápido y eficaz que se aplica directamente en las palmas de las manos, plantas de los pies o axilas y que tiene una duración de 8-12 meses. 
+                <h2 id="lipoescultura-pubis">lipoescultura del pubis</h2>
+                  <p> este procedimiento se realiza mediante la lipoaspiración del tejido graso acumulado en la zona pubiana. generalmente se realiza junto a la lipoescultura de otras zonas. también se puede realizar solo y es un procedimiento rápido de pronta recuperación y reinserción a las actividades cotidianas. 
                   </p>
               </li>
               <li> 
-                <h2 id="relleno">rellenos con acido hialuronico</h2>
-                  <p> el ácido hialurónico es un componente importante del organismo, presente en estado natural en todos los tejidos. se mezcla con las fibras de colágeno y ayuda a mejorar la hidratación, calidad y apariencia de la piel. con el paso del tiempo se disminuye su producción y aparecen las arrugas. al ser producido por el propio organismo, también es degradado de forma natural por éste en un lapso entre seis y nueve meses. en estética puede utilizarse para: rehidratación de la piel, corrección de arrugas, cicatrices, remodelación nasal, mejillas, mentón y labios. 
+                <h2 id="descapuchamiento-clítoris">descapuchamiento del clítoris</h2>
+                  <p> el clítoris se encuentra cubierto por un capuchón de piel que puede estar aumentado de tamaño cubriéndolo parcial o totalmente generando menor estimulación sexual. este procedimiento reduce su tamaño mejorando su estética y funcionalidad.
                   </p>
               </li>
-              <li> 
-                <h2 id="plasma">plasma rico en plaquetas</h2>
-                  <p> el plasma rico en plaquetas o p.r.p es un preparado que se obtiene de la centrifugación de la sangre del propio paciente y logra un producto concentrado en plaquetas. estas van a liberar sus factores de crecimiento, que potencian los mecanismos de regeneración de tejidos de manera rápida y eficaz. además, estimula la generación de colágeno, mejora la vitalidad y elasticidad de la piel, favorece la cicatrización de heridas y el crecimiento del cabello. se puede también combinar con sustancias específicas para cada patología y aumentar su poder regenerativo.  
-                  </p>
-              </li>
-            </ul>
-            <div class="service-pic">
-              <img src="styles/img/cuerpo.jpg" alt="cuerpo-medicina-estetica">
-            </div>
-            <ul>
-              <li> 
-                <h2 id="plasma">hilos tensores</h2>
-                  <p> los hilos tensores pueden ayudar a generar mayor proyección o sustentación según necesitemos. hay que tener en cuenta que no corrigen flaccidez y caída marcada de los tejidos. estos se pueden utilizar en casos de pérdida del contorno facial, falta de definición en pómulos, surcos nasogenianos marcados, pliegues verticales del cuello. producen un efecto inmediato por la tracción que producen y a largo plazo ya que ayudan mediante la formación de tejido colágeno a generar una malla de sostén que contrarresta el efecto de la gravedad.  son completamente biodegradables.  
-                  </p>
-              </li>
-              <li> 
-                <h2 id="mesoterapia">mesoterapia</h2>
-                  <p> consiste en la inyección local de medicamentos y vitaminas que favorecen el crecimiento, el grosor y la calidad del cabello.  
-                  </p>
-              </li>
-              <li> 
-                <h2 id="plaquetas">plasma rico en plaquetas</h2>
-                  <p> las plaquetas aportan factores de crecimiento y es obtenido de la propia sangre del paciente. implante capilar: es el tratamiento para los pacientes con pérdida definitiva del cabello. 
-                  </p>
-              </li>
-              
             </ul>
           </div>
         </div>
-      </div>
     </div>
   
     <div  id="contacto"  class="container"> 
