--- a/cirugia-plastica.html
+++ b/cirugia-plastica.html
@@ -67,74 +67,85 @@
         </div>
     </div>
     <div class="container">
-      <h2 class="service-title">Medicina Estética</h2>
-        <div class="service-presentation"> 
-          
+      <h2 class="service-title">Cirugía plástica y reparadora</h2>
+        <div class="service-presentation">   
           <div class="service-list">
+            <h2 class="service-subtitle" id="mamas">Mamas</h2>
             <div class="service-pic">
-              <img src="styles/img/medicinaestetica.jpg" alt="cuerpo-medicina-estetica">
+              <img src="styles/img/mamas.jpg" alt="rostro">
             </div>
             <ul > 
               <li> 
-                <h2 id="peelings">peelings</h2>
-                  <p> el peeling es uno de los tratamientos médicos estéticos mas populares. consiste en la eliminación de las capas mas superficiales de la piel mediante el uso de sustancias químicas o mecánicas. esto hace que la piel luzca mas joven y luminosa y la estimula a generar nuevas y mayores fibras elásticas y de colágeno. cada método o sustancia poseerá características especificas para cada tipo de piel. se pueden tratar: arrugas finas, estrías, cicatrices de acné, manchas, poros dilatados, pieles de aspecto envejecido o apagadas. existen peelings de baja, media o alta intensidad para cada inesteticismo que deben ser aplicados por un médico especialista en el tema. 
+                <h2 id="aumentomamario">Aumento Mamario</h2>
+                  <p> La mastoplastía de aumento es un procedimiento que mediante un implante de silicona cambia la forma y el tamaño de las mamas. Existen distintas formas de abordaje y planos de colocación. 
+                    Esta cirugía logra: Aumento de tamaño, mejorar asimetrías, luego del parto o adelgazamiento.
+                    Podés agendar una consulta para personalizar tu tratamiento. 
                   </p>
               </li>
               <li> 
-                <h2 id="celulitis">celulitis y flaccidez</h2>
-                  <p> la celulitis es una condición en la que la piel adquiere aspecto de cáscara de naranja que tiene numerosas causas como hormonales, circulatorias, dieta, sedentarismo, tabaquismo entre otras. existen diferentes grados y características por lo que cada una posee un tratamiento diferente. te recomendamos una consulta con un especialista en el tema para que pueda elegir la opción mas adecuada. 
+                <h2 id="reduccionmamaria">Reduccion Mamaria</h2>
+                  <p> La mastoplastía de reducción es un procedimiento que quita tejido graso y mamario logrando una forma y tamaño acordes a cada cuerpo, y en caso de ser necesario llevar el tamaño de la areola a un tamaño armónico. 
                   </p>
               </li>
               <li> 
-                <h2 id="toxina">toxina botulínica</h2>
-                  <p> la toxina botulínica logra relajar los músculos de la mímica para que no se marquen las arrugas o evitar que aparezcan. tiene una duración aproximada de 4-6 meses. se puede aplicar en frente, patas de gallo, cuello o nariz. también se utiliza para aquellos pacientes que tengan sudoración excesiva en manos o axilas y en aquellos que presentan bruxismo (apretón de dientes durante la noche). 
-                  </p>
-              </li>
-            </ul>
-            <div class="service-pic">
-              <img src="styles/img/cuerpo2.jpg" alt="cuerpo-medicina-estetica">
-            </div>
-            <ul>
-              <li> 
-                <h2 id="sudoracion">sudoración excesiva</h2>
-                  <p> la hiperhidrosis es la sudoración excesiva no relacionada necesariamente con el ejercicio o calor intenso. puede afectar axilas, manos y pies que interfiere en la vida cotidiana y generando disconfort. entre las opciones terapéuticas que existen, la aplicación de toxina botulínica bloquea la producción de sudor, mejorando notablemente los signos que este produce. es un procedimiento rápido y eficaz que se aplica directamente en las palmas de las manos, plantas de los pies o axilas y que tiene una duración de 8-12 meses. 
+                <h2 id="mastopexia">MASTOPEXIA (LEVANTAMIENTO MAMARIO)</h2>
+                  <p> La mastopexia logra llevar la mama y el pezón a un tamaño y posición acorde a cada cuerpo. En los casos en que solo haya exceso de piel, se podrá optar por eliminar su exceso y mejorar su forma mediante una prótesis de silicona. En los casos en que haya abundante piel y tejido mamario se podrá remodelar los mismos para obtener una mama armoniosa.  
                   </p>
               </li>
               <li> 
-                <h2 id="relleno">rellenos con acido hialuronico</h2>
-                  <p> el ácido hialurónico es un componente importante del organismo, presente en estado natural en todos los tejidos. se mezcla con las fibras de colágeno y ayuda a mejorar la hidratación, calidad y apariencia de la piel. con el paso del tiempo se disminuye su producción y aparecen las arrugas. al ser producido por el propio organismo, también es degradado de forma natural por éste en un lapso entre seis y nueve meses. en estética puede utilizarse para: rehidratación de la piel, corrección de arrugas, cicatrices, remodelación nasal, mejillas, mentón y labios. 
+                <h2 id="ginecomastia">GINECOMASTIA</h2>
+                  <p> La ginecomastia es el aumento de volumen de la glándula mamaria en el hombre que puede tener distintas causas. Si este aumento es pequeño solo será necesario la resección de la glándula mediante una incisión en la areola y, si este es mayor puede que sea necesario resecar piel además y por lo tanto habrá que hacer mas incisiones.  
                   </p>
               </li>
-              <li> 
-                <h2 id="plasma">plasma rico en plaquetas</h2>
-                  <p> el plasma rico en plaquetas o p.r.p es un preparado que se obtiene de la centrifugación de la sangre del propio paciente y logra un producto concentrado en plaquetas. estas van a liberar sus factores de crecimiento, que potencian los mecanismos de regeneración de tejidos de manera rápida y eficaz. además, estimula la generación de colágeno, mejora la vitalidad y elasticidad de la piel, favorece la cicatrización de heridas y el crecimiento del cabello. se puede también combinar con sustancias específicas para cada patología y aumentar su poder regenerativo.  
-                  </p>
-              </li>
-            </ul>
-            <div class="service-pic">
-              <img src="styles/img/cuerpo.jpg" alt="cuerpo-medicina-estetica">
-            </div>
-            <ul>
-              <li> 
-                <h2 id="plasma">hilos tensores</h2>
-                  <p> los hilos tensores pueden ayudar a generar mayor proyección o sustentación según necesitemos. hay que tener en cuenta que no corrigen flaccidez y caída marcada de los tejidos. estos se pueden utilizar en casos de pérdida del contorno facial, falta de definición en pómulos, surcos nasogenianos marcados, pliegues verticales del cuello. producen un efecto inmediato por la tracción que producen y a largo plazo ya que ayudan mediante la formación de tejido colágeno a generar una malla de sostén que contrarresta el efecto de la gravedad.  son completamente biodegradables.  
-                  </p>
-              </li>
-              <li> 
-                <h2 id="mesoterapia">mesoterapia</h2>
-                  <p> consiste en la inyección local de medicamentos y vitaminas que favorecen el crecimiento, el grosor y la calidad del cabello.  
-                  </p>
-              </li>
-              <li> 
-                <h2 id="plaquetas">plasma rico en plaquetas</h2>
-                  <p> las plaquetas aportan factores de crecimiento y es obtenido de la propia sangre del paciente. implante capilar: es el tratamiento para los pacientes con pérdida definitiva del cabello. 
-                  </p>
-              </li>
-              
             </ul>
           </div>
         </div>
-      </div>
+          <div class="service-presentation">
+            <div class="service-list"> 
+                <h2 class="service-subtitle" id="rostro">Rostro</h2>
+                <div class="service-pic">
+                  <img src="styles/img/rostro.jpg" alt="rostro">
+                  </div>
+                <ul> 
+                  <li> 
+                    <h2 id="blefaroplastia">blefaroplastia</h2>
+                      <p> la blefaroplastia es la cirugía que rejuvenece el contorno de los ojos eliminando el exceso de piel y bolsas grasas tanto de los párpados superiores como inferiores. en los párpados superiores la cicatriz queda disimulada en el surco palpebral y en los inferiores en la línea de las pestañas. también se pueden eliminar las bolsas grasas inferiores sin incisiones externas.  
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="rinoplastia">rinoplastia</h2>
+                      <p> la rinoplastía es una cirugía que busca llevar tu nariz a una forma más armoniosa con respecto al resto de tu cara sin parecer “operada”. con ella se pueden: reducir o aumentar el tamaño de la nariz (si es demasiado larga o corta), corregir la forma de la punta de la nariz, corregir la giba, reducir la abertura de las fosas nasales, corregir desvíos y problemas respiratorios.
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="auriculoplastia">auriculoplastia</h2>
+                      <p> la cirugía de orejas o auriculoplastía consiste en cambiar la forma o el tamaño de las mismas. la mas común es la cirugía de las orejas en asa u orejas prominentes y consiste en remodelar el cartílago mediante una incisión escondida detrás de las orejas, para darle una forma más armónica y agradable.  
+                      </p>
+                  </li>
+                </ul>
+                <div class="service-pic">
+                  <img src="styles/img/rostro2.jpg" alt="rostro">
+                  </div>
+                <ul>
+                  <li> 
+                    <h2 id="lifting">lifting facial o ritidoplastia</h2>
+                      <p> es el procedimiento mediante el cual se corrige la flaccidez facial y del cuello reposicionando los tejidos y eliminando el exceso de piel. las incisiones se ocultan en los pliegues y regiones poco visibles de la cabeza. rejuvenece el rostro con naturalidad y armonía.   
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="mentoplastía">mentoplastía</h2>
+                      <p> es un procedimiento que mediante la inclusión de un implante de silicona logra dar volumen y proyección al mentón. se realiza bajo anestesia general o sedación con una incisión pequeña localizada debajo del mentón. tiene un rápida recuperación y reincorporación a las actividades habituales.   
+                      </p>
+                  </li>
+                  <li> 
+                    <h2 id="bichectomia">bichectomia</h2>
+                      <p> las bolsas de bichat, son acúmulos de tejido adiposo que se localiza en el interior de las mejillas. el objetivo de su extracción es reducir el ancho de las mejillas, destacar los pómulos y afinar la cara. luce un rostro mas delgado y definido. se puede realizar en hombres como en mujeres, con una adecuada valoración de un profesional capacitado, determinaremos si eres o no candidato para este procedimiento.
+                      </p>
+                  </li>
+              </ul>
+            </div>
+            </div>
+          </div>
     </div>
   
     <div  id="contacto"  class="container"> 
